# distore

./: Makefile.am  Makefile.cvs  README  configure.ac  index.html
contrib/: file.install  mtd.install
etc/: Makefile.am  distore.conf
lib/: Makefile.am  README
lib/iniparser3.0b/: Makefile
src/: Makefile.am  callbacks.c  callbacks.h  config.c  config.h  debug.c  debug.h  hash.c  hash.h  main.c  messages.c  messages.h  sock.c  sock.h  update.c  update.h
